--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FE3745</color>
     <color name="dotcolor">#FE3745</color>
     <color name="dotco">#e0e0e0</color>
     <color name="chela_red">#FE3745</color>
