--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -271,6 +271,7 @@
             android:text="باحث عن شالية"
             android:textSize="18dp"
             android:layout_marginLeft="17dp"
+            android:checked="true"
             />
 
         <RadioButton
